--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "parcel build src/index.html"
+    "build": "parcel build src/index.html --dist-dir docs --public-url ./"
   },
   "keywords": [],
   "author": "Efenzik <artemcherkashin123@gmail.com>",
